:memo: volume mount
volume mount

--- a/docs/about-docker/about-docker.mdx
+++ b/docs/about-docker/about-docker.mdx
@@ -4,6 +4,8 @@ sidebar_position: 1
 
 # Docker Commands
 
+## 도커 실행
+
 ```shell
 docker run (옵션) 이미지 (인자)
 ```
@@ -24,16 +26,45 @@ docker image pull, docker container create, docker container start의 기능을 
 | `-t`                                     |    특수 키를 사용 가능하도록 함    |
 | `-help`                                  |   사용 방법 안내 메시지를 출력함   |
 
+## 도커 리스트
+
 ```shell
 docker ps (옵션)
 ```
 
 컨테이너의 목록을 출력하는 기능을 한다. `-a` 옵션을 추가하면 현재 존재하는 컨테이너 **(정지 상태의 컨테이너 포함)** 의 목록을 출력한다
 
+## 도커 정지
+
 ```shell
 docker stop 컨테이너_이름
 ```
 
+## 도커 삭제
+
 ```shell
 docker rm 컨테이너_이름
+```
+
+## 파일 복사
+
+파일 복사는 `컨테이너 -> 호스트`, `호스트 -> 컨테이너` 양방향 모두 가능하다.
+
+- 호스트 쪽 파일은 어디에 위치한 파일이라도 복사가 가능하다.
+- 컨테이너 쪽에서도 파일을 복사할 경로를 지정할 수 있다.
+
+```shell
+docker cp 원본_경로 복사할_경로
+```
+
+**호스트 -> 컨테이너**
+
+```shell
+docker cp 호스트_경로 컨테이너_이름:컨테이너_경로
+```
+
+**컨테이너 -> 호스트**
+
+```shell
+docker cp 컨테이너_이름:컨테이너_경로 호스트_경로
 ```
